adding hover and pressed effect for menu items

--- a/src/resources/css/common/General.css
+++ b/src/resources/css/common/General.css
@@ -85,3 +85,15 @@ QScrollArea > QWidget > QWidget
     background: transparent;        /*removing the background in content (public rooms) widget */
 }
 
+QMenuBar::item:selected { /* hover effect for menu bar items */
+
+    border: 1px outset gray;
+    padding: 3px 6px 3px 6px;
+    font-size: 11px;
+}
+
+QMenuBar::item:pressed { /* 'button pressed' item style */
+
+    border-style: inset;
+
+}
