--- a/src/resources/css/themes/Black/NinjamWindow.css
+++ b/src/resources/css/themes/Black/NinjamWindow.css
@@ -54,7 +54,8 @@ NinjamTrackView[horizontal="true"] QPushButton#buttonBoostPlus12:checked,
 NinjamTrackView[horizontal="true"] QPushButton#buttonBoostZero:checked
 {
     margin-top: -1px;
-    background-color: rgba(0, 0, 0, 30);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(100, 100, 100), stop:1 rgb(80, 80, 80));
+    color: rgba(0, 0, 0, 160);
 }
 
 NinjamTrackView[horizontal="true"]
