--- a/src/resources/css/themes/Orange/General.css
+++ b/src/resources/css/themes/Orange/General.css
@@ -244,30 +244,30 @@ QSlider::handle:vertical:hover
 /* TabBar ----------------------*/
 QTabBar::tab
 {
-background-color: #EFEEC2;
-border: none;/* 1px solid #D0D5EA;*/
-border-radius: 1px;
-min-width: 8ex;
-padding: 6px;
-padding-left: 10px;
-padding-right: 10px;
-font-size: 11px;
-color: black;
+    background-color: rgba(237, 227, 215, 145);
+    border: none;/* 1px solid #D0D5EA;*/
+    border-radius: 2px;
+    min-width: 8ex;
+    padding: 6px;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 11px;
+    color: black;
 }
 
 QTabBar::tab:selected
 {
-    background-color: rgb(253, 253, 253);
-    border-top: 1px solid black;/* 1px solid #D0D5EA;*/
-    border-left: 1px solid black;
+    background-color: rgb(237, 227, 215);
+    /* border-top: 1px solid black;/* 1px solid #D0D5EA;*/
+    /* border-left: 1px solid black;
     border-right: 1px solid black;
-    border-bottom: none;
+    border-bottom: 1px solid rgb(237, 227, 215);*/
 }
 
 QTabBar::tab:hover,
 QTabBar::tab:hover:checked
 {
-    background-color: white;
+    background-color: rgba(237, 227, 215, 90);
 }
 
 QTabBar::tab:!selected
