comment title correction for fire theme

--- a/src/resources/css/themes/Fire/General.css
+++ b/src/resources/css/themes/Fire/General.css
@@ -1,4 +1,4 @@
-/* General stylesheet for Orange theme
+/* General stylesheet for Fire theme
 -------------------------------------*/
 
 /* Button ----------------------*/
