--- a/src/resources/css/themes/Fire/LocalTrack.css
+++ b/src/resources/css/themes/Fire/LocalTrack.css
@@ -1,4 +1,4 @@
-/* Local track stylesheet for Orange theme */
+/* Local track stylesheet for Fire theme */
 
 
 /* FxPanelItem is the 'slot' for one vst plugin
