--- a/src/resources/css/themes/Rounded/Dialogs.css
+++ b/src/resources/css/themes/Rounded/Dialogs.css
@@ -36,6 +36,14 @@ PluginScanDialog #labelPluginText
     font-weight: bold;
 }
 
+PrivateServerDialog #comboBoxServers
+{
+    border: 1px solid rgba(0, 0, 0, 30);
+    border-radius: 3px;
+    color: black;
+    background-color: #C5C5C5;
+}
+
 BusyDialog
 {
     border: 1px solid rgba(0, 0, 0, 30);
