flat theme border when focus

--- a/src/resources/css/themes/Flat/Dialogs.css
+++ b/src/resources/css/themes/Flat/Dialogs.css
@@ -25,6 +25,7 @@ PrivateServerDialog #comboBoxServers
 PrivateServerDialog #comboBoxServers:focus
 {
     color: black;
+    border:1px solid gray;
 }
 
 BusyDialog
