--- a/src/resources/css/themes/Fire/LocalTrack.css
+++ b/src/resources/css/themes/Fire/LocalTrack.css
@@ -4,7 +4,11 @@
 /* FxPanelItem is the 'slot' for one vst plugin
 --------------------------------------------------*/
 FxPanelItem{
-    background-color: rgb(255, 197, 117);
+    background-color: qlineargradient(x1:0, y1:1, x2:0, y2:0,
+        stop:0    rgb(206, 48, 3),
+        stop:0.2 rgb(212, 69, 29),
+        stop:0.7  rgb(240, 100, 2),
+        stop:1    rgb(248, 151, 118));
     background-position: center right;
     background-repeat: none;
     max-height: 14px;
@@ -37,10 +41,15 @@ FxPanelItem[containPlugin="true"]                       /* non empty slot */
 
 FxPanelItem QLabel                                     /* plugin name label */
 {
-    color: rgb(127, 77, 26);
+    color: rgb(200, 200, 200);
     qproperty-alignment: AlignLeft;
     font-size: 10px;
     margin: 0px;
+}
+
+FxPanelItem QLabel:hover
+{
+    color: white;
 }
 
 FxPanelItem:hover                                       /* slot hover effect */
@@ -55,7 +64,7 @@ FxPanelItem QPushButton                                 /* the small button used
      margin: 0px;
      padding: 0px;
      border-color: rgb(110,110,110);
-     background-color: rgb(250, 225, 169)
+     background-color: rgb(250, 225, 169);
 }
 
 FxPanelItem QPushButton:hover                           /* hover effect for the small 'plugin bypass' button */
@@ -147,7 +156,7 @@ min-height: 15px;
 #xmitButton:checked
 {
 /*background-color: rgb(90,90,90);*/
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgba(90, 255, 62, 170), stop:1 rgb(0, 175, 0, 170));
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(20, 180, 20), stop:1 rgb(0, 80, 0));
 border-color: rgb(50, 50, 50);
 border-style: inset;
 color: rgba(0,40, 0);
@@ -178,10 +187,14 @@ background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgba(255, 90,
 
 LocalTrackGroupView #groupNameField
 {
-    background-color: rgb(255, 197, 117);
+    background-color: qlineargradient(x1:0, y1:1, x2:0, y2:0,
+        stop:0    rgb(206, 48, 3),
+        stop:0.2 rgb(212, 69, 29),
+        stop:0.7  rgb(240, 100, 2),
+        stop:1    rgb(248, 151, 118));
     border-radius: 2px;
     border-color: rgba(0, 0, 0, 45);
-    color: rgb(127, 77, 26);
+    color: rgb(200, 200, 200);
 }
 
 LocalTrackGroupView[unlighted="true"] #groupNameField
