--- a/src/resources/css/themes/Fire/PublicRooms.css
+++ b/src/resources/css/themes/Fire/PublicRooms.css
@@ -2,7 +2,7 @@
 
 JamRoomViewPanel
 {
-    background: rgb(255, 197, 117);
+    background: rgb(239, 114, 24);
     border: none; /* 1px solid #FFC435;*/
     /* border-bottom: 1px solid black;/*#E5E5E5;*/
     border-radius: 1px;
@@ -11,16 +11,23 @@ JamRoomViewPanel
 
 JamRoomViewPanel #content                   /* where the user names and wave form are showed */
 {
-        background: rgb(250, 225, 169);
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+    stop:0 rgb(239, 114, 24),
+    stop:1 rgb(194, 34, 0));
 }
 
 JamRoomViewPanel #labelName             /* the server name (ninbot.com, ninjamer.com, etc) */
 {
-    color: rgb(127, 77, 26);
+    color: rgb(230, 230, 230);
     font-weight: bold;
+}
+
+JamRoomViewPanel #labelRoomStatus
+{
+    color: rgb(180, 180, 180);
 }
 
 JamRoomViewPanel .PlayerLabel
 {
-    color: black;
+    color: white;
 }
