Showing disabled menu items with different colors

--- a/src/resources/css/common/General.css
+++ b/src/resources/css/common/General.css
@@ -97,3 +97,9 @@ QMenuBar::item:pressed { /* 'button pressed' item style */
     border-style: inset;
 
 }
+
+/* fix to issue #500 */
+QMenu::item::disabled
+{
+    color: rgba(0, 0, 0, 120);
+}
