--- a/src/resources/css/themes/Black/General.css
+++ b/src/resources/css/themes/Black/General.css
@@ -303,6 +303,7 @@ QMenu
 QMenu::item:selected
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(60, 60, 60), stop:1 rgb(40, 40, 40));
+    color: black; /* fix to issue #500 */
 }
 
 QTabWidget::pane
